--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3>My First Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit enim cumque quia aliquam dolore accusantium libero hic sit qui.</p>
     </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit enim cumque quia aliquam dolore accusantium libero hic sit qui.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit enim cumque quia aliquam dolore accusantium libero hic sit qui.</p>
+    </div>
     
 </body>
 </html>
