--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit enim cumque quia aliquam dolore accusantium libero hic sit qui.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m""added meaningful msg"</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
