added the image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Add Image</h3>
+        <img src="images/Birynai.jpeg" alt="junk-food">
+    </div>
     
 </body>
 </html>
